--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "dotenv": "^16.4.5",
     "next": "14.2.5",
     "openai": "^4.55.4",
     "react": "^18",
     "react-dom": "^18"
   },
+  "type": "module",
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.5"
